--- a/til-app-tests/pom.xml
+++ b/til-app-tests/pom.xml
@@ -14,11 +14,20 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <!--maven.compiler.source>1.7</maven.compiler.source-->
+    <!--maven.compiler.target>1.7</maven.compiler.target-->
+    <maven.compiler.release>17</maven.compiler.release>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <!--version>2.0rc2</version-->
+      <version>4.11.0</version>
+      <type>pom</type>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
