--- a/til-app-tests/pom.xml
+++ b/til-app-tests/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>til-app-tests</artifactId>
+  <artifactId>til-tests</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>til-app-tests</name>
+  <name>til-tests</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
